Thu Jan 21 01:15:28 1999  Jeff Garzik  <jgarzik@pobox.com>

	* gdk/gdkdnd.c (gdk_drag_context_unref):
	Move not-null assertion before pointer de-ref.

	* gdk/gdkevents.c (gdk_event_queue_find_first):
	Fix infinite loop bug.  Someone should look at this further to
	make sure the events_pending tests are correct.

Thu Jan 21 00:44:47 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_dest_drop): Default handling
	for drops should be keyed on GTK_DRAG_DEFAULT_DROP
	not GTK_DRAG_DEFAULT_MOTION.

Wed Jan 20 21:52:51 1999  Jeff Garzik  <jgarzik@pobox.com>

	* gtk/gtkclist.c (real_remove_row):
	Don't search entire row list twice for element being removed.

	* gtk/gtkmenushell.c (gtk_menu_shell_insert):
	Replaced hand-coded implementation of g_list_insert with
	call to g_list_insert.

	* gtk/gtktooltips.c
	  (gtk_tooltips_destroy_data, gtk_tooltips_layout_text):
	tooltipsdata->row test not-null test now properly encompasses
	both g_list_* calls.

Thu Jan 21 02:47:36 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtknotebook.c (gtk_notebook_focus): few cleanups.
	(gtk_notebook_key_press): call select page function for
	GDK_DOWN key in case of tab_pos == TOP. Changed other
	positions accordingly.

Wed Jan 20 19:57:14 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_begin): Start off with the
	cursor for "no drop" since if we'll get a status
	if we are over a drag window, but none if we aren't
	over one. 

1999-01-20  Jeff Garzik  <jgarzik@pobox.com>

	* gtk/gtkcombo.c (gtk_combo_entry_key_press):
	Free 'nprefix', closing a memory leak.
	Spaced out the code a bit to make it more readable.

	* gtk/gtkhbox.[ch] (gtk_hbox_new),
	  gtk/gtkvbox.[ch] (gtk_vbox_new):
	Change 'homogenous' arg from gint to gboolean.

	* gtk/gtktogglebutton.[ch]:
	New function gtk_toggle_button_get_active().

1999-01-20  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkdnd.c (gtk_drag_get_event_action): Allow button 2 to act